--- a/openTRANS/openTRANS.csproj
+++ b/openTRANS/openTRANS.csproj
@@ -6,7 +6,11 @@
     <Authors>DXSdata</Authors>
     <Company>DXSdata GmbH</Company>
     <Description>.NET Core / Standard implementation of the openTRANS v2.1 definitions by Fraunhofer IAO</Description>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ISO3166" Version="1.0.2" />
+  </ItemGroup>
 
 </Project>
