Keep other folders as well and add hint

--- a/openTRANS/openTRANS.csproj
+++ b/openTRANS/openTRANS.csproj
@@ -17,6 +17,8 @@
 		<Folder Include="INVOICE\" />
 		<Folder Include="DISPATCHNOTIFICATION\" />
 		<Folder Include="QUOTATION\" />
+		<Folder Include="INVOICE\" />
+		<Folder Include="DISPATCHNOTIFICATION\" />
 	</ItemGroup>
 
 	<!-- ignore some useless CS warnings -->
